# My-projects

./: LICENSE  README.md  memory.c  memory.h  memtest  test.c  third_party  third_party.c
phish/: CMakeLists.txt  README.md  main.cpp
phish/engine/: CMakeLists.txt
phish/engine/bitboard/: bitboard.cpp  bitboard.h
phish/engine/board/: position.cpp  position.h
phish/engine/movegen/: move.h
phish/engine/search/: search.cpp  search.h
phish/engine/uci/: uci.cpp  uci.h
phish/engine/util/: config.cpp  config.h  types.h  zobrist.cpp  zobrist.h
phish/tests/: CMakeLists.txt
phish/tests/perft/: perft_positions.txt  run_perft.cpp
